[gd_scene load_steps=10 format=3 uid="uid://cf3wlna5ki846"]

[ext_resource type="Script" path="res://menu/main/TitleScreen.gd" id="1_mpvbx"]
[ext_resource type="Theme" uid="uid://p7fc7eiwupyw" path="res://theme/main_menu.tres" id="2_7feem"]
[ext_resource type="Texture2D" uid="uid://b8ahj1h8tttqg" path="res://art/light_cone.png" id="3_y0o7f"]
[ext_resource type="Script" path="res://menu/CustomMenuButton.gd" id="4_i7rd2"]
[ext_resource type="Theme" uid="uid://bvc652bwjujtl" path="res://theme/main_ui.tres" id="5_euscd"]
[ext_resource type="Script" path="res://menu/CustomMenuHSlider.gd" id="6_ba503"]
[ext_resource type="Theme" uid="uid://c8qjml4q8nu2g" path="res://theme/sidebar_menu_theme.tres" id="7_tyis1"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_kd5ff"]
light_mode = 2

[sub_resource type="ButtonGroup" id="ButtonGroup_seibb"]

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_mpvbx")
metadata/_edit_vertical_guides_ = [450.0]

[node name="SubViewportContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VPC" type="SubViewportContainer" parent="SubViewportContainer"]
layout_mode = 0
offset_left = 215.0
offset_right = 1495.0
offset_bottom = 720.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer/VPC"]
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="DisplayCamera" type="Camera2D" parent="SubViewportContainer/VPC/SubViewport"]
position = Vector2(831.245, 2362)

[node name="MenuBackground" type="ColorRect" parent="SubViewportContainer"]
layout_mode = 2
offset_left = -10.0
offset_top = -10.0
offset_right = 483.0
offset_bottom = 729.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="DisplayView" type="Node2D" parent="."]
position = Vector2(504, 2000)

[node name="ColorRect" type="ColorRect" parent="DisplayView"]
z_index = -999
material = SubResource("CanvasItemMaterial_kd5ff")
offset_left = -498.0
offset_top = -1025.0
offset_right = 1210.0
offset_bottom = 1305.0

[node name="PointLight2D" type="PointLight2D" parent="DisplayView"]
position = Vector2(343.5, 135.67)
scale = Vector2(3.31445, 4.48567)
energy = 0.0
texture = ExtResource("3_y0o7f")
height = 350.0

[node name="ItemSpawn" type="Node2D" parent="DisplayView"]
position = Vector2(327, 363)

[node name="Coverup" type="ColorRect" parent="DisplayView"]
offset_left = -557.0
offset_top = -1073.0
offset_right = 1240.0
offset_bottom = 1351.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="OptionsContainer" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 512.0
offset_top = 684.0
offset_right = 800.0
offset_bottom = 684.0

[node name="OptionsGrid" type="GridContainer" parent="OptionsContainer"]
layout_mode = 2
offset_left = -182.0
offset_top = -619.0
offset_right = 418.0
offset_bottom = -353.0
columns = 4
metadata/_edit_lock_ = true

[node name="ItemCountLabel" type="Label" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_7feem")
text = "Items"
metadata/_edit_lock_ = true

[node name="ItemCountDecrease" type="Button" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_7feem")
text = "<"
script = ExtResource("4_i7rd2")

[node name="ItemCountAmount" type="Label" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("2_7feem")
text = "1"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="ItemCountIncrease" type="Button" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_7feem")
text = ">"
script = ExtResource("4_i7rd2")

[node name="RotationLabel" type="Label" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_7feem")
text = "Rotation"
metadata/_edit_lock_ = true

[node name="RotationDecrease" type="Button" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_7feem")
text = "<"
script = ExtResource("4_i7rd2")

[node name="RotationValue" type="Label" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("2_7feem")
text = "yes"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="RotationIncrease" type="Button" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_7feem")
text = ">"
script = ExtResource("4_i7rd2")

[node name="BumpLabel" type="Label" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_7feem")
text = "Piece Bumping"
metadata/_edit_lock_ = true

[node name="BumpDecrease" type="Button" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_7feem")
text = "<"
script = ExtResource("4_i7rd2")

[node name="BumpValue" type="Label" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("2_7feem")
text = "yes"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="BumpIncrease" type="Button" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_7feem")
text = ">"
script = ExtResource("4_i7rd2")

[node name="CrackWidthLabel" type="Label" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_7feem")
text = "Crack Width "
metadata/_edit_lock_ = true

[node name="CrackWidthDecrease" type="Button" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_7feem")
text = "<"
script = ExtResource("4_i7rd2")

[node name="CrackWidthAmount" type="Label" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("2_7feem")
text = "Thin"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="CrackWidthIncrease" type="Button" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_7feem")
text = ">"
script = ExtResource("4_i7rd2")

[node name="CrackAmtLabel" type="Label" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_7feem")
text = "Crack Count "
metadata/_edit_lock_ = true

[node name="CrackAmtDecrease" type="Button" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_7feem")
text = "<"
script = ExtResource("4_i7rd2")

[node name="CrackAmtAmount" type="Label" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("2_7feem")
text = "6"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="CrackAmtIncrease" type="Button" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_7feem")
text = ">"
script = ExtResource("4_i7rd2")

[node name="WeatheringLabel" type="Label" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_7feem")
text = "Weathering"
metadata/_edit_lock_ = true

[node name="WeatheringDecrease" type="Button" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_7feem")
text = "<"
script = ExtResource("4_i7rd2")

[node name="WeatheringAmount" type="Label" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("2_7feem")
text = "None"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="WeatheringIncrease" type="Button" parent="OptionsContainer/OptionsGrid"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_7feem")
text = ">"
script = ExtResource("4_i7rd2")

[node name="StartButton" type="Button" parent="OptionsContainer"]
layout_mode = 2
offset_left = -104.0
offset_top = -249.0
offset_right = 43.0
offset_bottom = -210.0
focus_mode = 0
theme = ExtResource("2_7feem")
text = "Start"
alignment = 0
script = ExtResource("4_i7rd2")

[node name="BackButton" type="Button" parent="OptionsContainer"]
layout_mode = 2
offset_left = 202.0
offset_top = -247.0
offset_right = 324.0
offset_bottom = -208.0
focus_mode = 0
theme = ExtResource("2_7feem")
text = "Back"
alignment = 0
script = ExtResource("4_i7rd2")
sfx = "none"

[node name="HoverDescription" type="Label" parent="OptionsContainer"]
layout_mode = 2
offset_left = -511.0
offset_top = -128.0
offset_right = 767.0
offset_bottom = -89.0
theme = ExtResource("2_7feem")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="SettingsContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AudioSettings" type="Button" parent="SettingsContainer"]
layout_mode = 0
offset_left = 702.0
offset_top = 138.0
offset_right = 834.0
offset_bottom = 177.0
theme = ExtResource("2_7feem")
toggle_mode = true
button_group = SubResource("ButtonGroup_seibb")
text = "Audio"
script = ExtResource("4_i7rd2")

[node name="WeatheringSettings" type="Button" parent="SettingsContainer"]
layout_mode = 0
offset_left = 330.0
offset_top = 137.0
offset_right = 600.0
offset_bottom = 176.0
theme = ExtResource("2_7feem")
toggle_mode = true
button_group = SubResource("ButtonGroup_seibb")
text = "Weathering"
script = ExtResource("4_i7rd2")

[node name="AudioSettingsContainer" type="Control" parent="SettingsContainer"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("5_euscd")

[node name="MarginContainer" type="MarginContainer" parent="SettingsContainer/AudioSettingsContainer"]
layout_mode = 0
offset_left = 256.0
offset_top = 224.0
offset_right = 895.0
offset_bottom = 340.0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer/AudioSettingsContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsContainer/AudioSettingsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OverallLabel" type="Label" parent="SettingsContainer/AudioSettingsContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Global Volume"
vertical_alignment = 1
autowrap_mode = 2

[node name="OverallVolume" type="HSlider" parent="SettingsContainer/AudioSettingsContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
script = ExtResource("6_ba503")

[node name="HBoxContainer3" type="HBoxContainer" parent="SettingsContainer/AudioSettingsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SfxLabel" type="Label" parent="SettingsContainer/AudioSettingsContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "SFX Volume"
vertical_alignment = 1
autowrap_mode = 2

[node name="SfxVolume" type="HSlider" parent="SettingsContainer/AudioSettingsContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
script = ExtResource("6_ba503")

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingsContainer/AudioSettingsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="SettingsContainer/AudioSettingsContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Music Volume"
vertical_alignment = 1
autowrap_mode = 2

[node name="MusicVolume" type="HSlider" parent="SettingsContainer/AudioSettingsContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
script = ExtResource("6_ba503")

[node name="WeatheringSettingsContainer" type="Control" parent="SettingsContainer"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="WeatheringName" type="Label" parent="SettingsContainer/WeatheringSettingsContainer"]
layout_mode = 0
offset_left = 482.0
offset_top = 525.0
offset_right = 628.0
offset_bottom = 548.0
theme = ExtResource("2_7feem")
theme_override_font_sizes/font_size = 20
text = "Weathering"

[node name="PrevExample" type="Button" parent="SettingsContainer/WeatheringSettingsContainer"]
offset_left = 178.0
offset_top = 361.0
offset_right = 203.0
offset_bottom = 411.0
focus_mode = 0
theme = ExtResource("2_7feem")
text = "<"
script = ExtResource("4_i7rd2")

[node name="MedExample" type="TextureRect" parent="SettingsContainer/WeatheringSettingsContainer"]
layout_mode = 0
offset_left = 512.0
offset_top = 214.0
offset_right = 787.0
offset_bottom = 489.0
expand_mode = 2

[node name="LowExample" type="TextureRect" parent="SettingsContainer/WeatheringSettingsContainer"]
layout_mode = 0
offset_left = 213.0
offset_top = 212.0
offset_right = 488.0
offset_bottom = 487.0
expand_mode = 2

[node name="HighExample" type="TextureRect" parent="SettingsContainer/WeatheringSettingsContainer"]
layout_mode = 0
offset_left = 810.0
offset_top = 215.0
offset_right = 1085.0
offset_bottom = 490.0
expand_mode = 2

[node name="NextExample" type="Button" parent="SettingsContainer/WeatheringSettingsContainer"]
offset_left = 1089.0
offset_top = 358.0
offset_right = 1114.0
offset_bottom = 408.0
focus_mode = 0
theme = ExtResource("2_7feem")
text = ">"
script = ExtResource("4_i7rd2")

[node name="EnabledCheckbox" type="CheckBox" parent="SettingsContainer/WeatheringSettingsContainer"]
layout_mode = 0
offset_left = 688.0
offset_top = 520.0
offset_right = 712.0
offset_bottom = 544.0
text = "Enabled"

[node name="SettingsBack" type="Button" parent="SettingsContainer"]
offset_left = 500.0
offset_top = 594.0
offset_right = 622.0
offset_bottom = 633.0
focus_mode = 0
theme = ExtResource("2_7feem")
text = "Back"
alignment = 0
script = ExtResource("4_i7rd2")
sfx = "none"

[node name="MainMenu" type="VBoxContainer" parent="."]
offset_left = 68.0
offset_top = 192.0
offset_right = 426.0
offset_bottom = 508.0

[node name="ContinueButton" type="Button" parent="MainMenu"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_7feem")
text = "Continue"
script = ExtResource("4_i7rd2")
metadata/_edit_lock_ = true

[node name="ZenButton" type="Button" parent="MainMenu"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_7feem")
text = "Relax Mode"
script = ExtResource("4_i7rd2")
metadata/_edit_lock_ = true

[node name="TimeButton" type="Button" parent="MainMenu"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_7feem")
text = "Struggle Mode"
script = ExtResource("4_i7rd2")
metadata/_edit_lock_ = true

[node name="GalleryButton" type="Button" parent="MainMenu"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_7feem")
text = "Gallery"
script = ExtResource("4_i7rd2")
metadata/_edit_lock_ = true

[node name="SettingsButton" type="Button" parent="MainMenu"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_7feem")
text = "Options"
script = ExtResource("4_i7rd2")
metadata/_edit_lock_ = true

[node name="ExitButton" type="Button" parent="MainMenu"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_7feem")
text = "Exit"
script = ExtResource("4_i7rd2")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="ItemPreparation" type="Node2D" parent="."]
position = Vector2(-1827, -453)

[node name="CreditsScreen" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
offset_left = 672.0
offset_top = 112.0
offset_right = 712.0
offset_bottom = 152.0

[node name="CreditsBackground" type="ColorRect" parent="CreditsScreen"]
offset_left = -676.0
offset_top = -117.0
offset_right = 607.0
offset_bottom = 628.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="CreditsScreen"]
layout_mode = 0
offset_left = -502.0
offset_top = -49.0
offset_right = -290.0
offset_bottom = -1.0
theme = ExtResource("7_tyis1")
text = "Programming"

[node name="Label2" type="Label" parent="CreditsScreen"]
layout_mode = 0
offset_left = -496.0
offset_top = -8.0
offset_right = -302.0
offset_bottom = 40.0
theme = ExtResource("7_tyis1")
text = "Kevin Hobbs"

[node name="Label3" type="Label" parent="CreditsScreen"]
offset_left = -228.0
offset_top = 64.0
offset_right = -166.0
offset_bottom = 112.0
theme = ExtResource("7_tyis1")
text = "Art"

[node name="Label4" type="Label" parent="CreditsScreen"]
offset_left = -396.0
offset_top = 104.0
offset_right = 33.0
offset_bottom = 152.0
theme = ExtResource("7_tyis1")
text = "Jeremy Hobbs / ribbonblack"

[node name="Label5" type="Label" parent="CreditsScreen"]
offset_left = -140.0
offset_top = 184.0
offset_right = -34.0
offset_bottom = 232.0
theme = ExtResource("7_tyis1")
text = "Music"

[node name="Label6" type="Label" parent="CreditsScreen"]
offset_left = -284.0
offset_top = 224.0
offset_right = 186.0
offset_bottom = 272.0
theme = ExtResource("7_tyis1")
text = "Creative Commons Music"

[node name="Label9" type="Label" parent="CreditsScreen"]
offset_left = -340.0
offset_top = 256.0
offset_right = 208.0
offset_bottom = 304.0
theme = ExtResource("7_tyis1")
text = "by Jason Shaw on Audionautix.com"

[node name="Label7" type="Label" parent="CreditsScreen"]
offset_left = -44.0
offset_top = 328.0
offset_right = 62.0
offset_bottom = 376.0
theme = ExtResource("7_tyis1")
text = "Sound"

[node name="Label8" type="Label" parent="CreditsScreen"]
offset_left = -92.0
offset_top = 360.0
offset_right = 378.0
offset_bottom = 408.0
theme = ExtResource("7_tyis1")
text = "Pixabay.com"

[node name="Label10" type="Label" parent="CreditsScreen"]
offset_left = 28.0
offset_top = 456.0
offset_right = 295.0
offset_bottom = 504.0
theme = ExtResource("7_tyis1")
text = "Made with Godot"

[node name="CreditsButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 60)
offset_left = 1138.0
offset_top = 656.0
offset_right = 1271.0
offset_bottom = 716.0
focus_mode = 0
theme = ExtResource("2_7feem")
theme_override_font_sizes/font_size = 20
text = "Credits"
script = ExtResource("4_i7rd2")

[node name="SplashScreen" type="Control" parent="."]
visible = false
z_index = 999
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="SplashScreen"]
layout_mode = 0
offset_left = -54.0
offset_top = -68.0
offset_right = 1361.0
offset_bottom = 790.0
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/ItemCountLabel" to="." method="_on_item_count_label_mouse_entered"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/ItemCountDecrease" to="." method="_on_item_count_label_mouse_entered"]
[connection signal="pressed" from="OptionsContainer/OptionsGrid/ItemCountDecrease" to="." method="_on_item_count_decrease_pressed"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/ItemCountAmount" to="." method="_on_item_count_label_mouse_entered"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/ItemCountIncrease" to="." method="_on_item_count_label_mouse_entered"]
[connection signal="pressed" from="OptionsContainer/OptionsGrid/ItemCountIncrease" to="." method="_on_item_count_increase_pressed"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/RotationLabel" to="." method="_on_rotation_label_mouse_entered"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/RotationDecrease" to="." method="_on_rotation_label_mouse_entered"]
[connection signal="pressed" from="OptionsContainer/OptionsGrid/RotationDecrease" to="." method="_on_rotation_decrease_pressed"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/RotationValue" to="." method="_on_rotation_label_mouse_entered"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/RotationIncrease" to="." method="_on_rotation_label_mouse_entered"]
[connection signal="pressed" from="OptionsContainer/OptionsGrid/RotationIncrease" to="." method="_on_rotation_decrease_pressed"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/BumpLabel" to="." method="_on_bump_label_mouse_entered"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/BumpDecrease" to="." method="_on_bump_label_mouse_entered"]
[connection signal="pressed" from="OptionsContainer/OptionsGrid/BumpDecrease" to="." method="_on_bump_decrease_pressed"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/BumpValue" to="." method="_on_bump_label_mouse_entered"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/BumpIncrease" to="." method="_on_bump_label_mouse_entered"]
[connection signal="pressed" from="OptionsContainer/OptionsGrid/BumpIncrease" to="." method="_on_bump_increase_pressed"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/CrackWidthLabel" to="." method="_on_crack_width_label_mouse_entered"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/CrackWidthDecrease" to="." method="_on_crack_width_label_mouse_entered"]
[connection signal="pressed" from="OptionsContainer/OptionsGrid/CrackWidthDecrease" to="." method="_on_crack_width_decrease_pressed"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/CrackWidthAmount" to="." method="_on_crack_width_label_mouse_entered"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/CrackWidthIncrease" to="." method="_on_crack_width_label_mouse_entered"]
[connection signal="pressed" from="OptionsContainer/OptionsGrid/CrackWidthIncrease" to="." method="_on_crack_width_increase_pressed"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/CrackAmtLabel" to="." method="_on_crack_amt_label_mouse_entered"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/CrackAmtDecrease" to="." method="_on_crack_amt_label_mouse_entered"]
[connection signal="pressed" from="OptionsContainer/OptionsGrid/CrackAmtDecrease" to="." method="_on_crack_amt_decrease_pressed"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/CrackAmtAmount" to="." method="_on_crack_amt_label_mouse_entered"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/CrackAmtIncrease" to="." method="_on_crack_amt_label_mouse_entered"]
[connection signal="pressed" from="OptionsContainer/OptionsGrid/CrackAmtIncrease" to="." method="_on_crack_amt_increase_pressed"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/WeatheringLabel" to="." method="_on_weathering_label_mouse_entered"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/WeatheringDecrease" to="." method="_on_weathering_label_mouse_entered"]
[connection signal="pressed" from="OptionsContainer/OptionsGrid/WeatheringDecrease" to="." method="_on_weathering_decrease_pressed"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/WeatheringAmount" to="." method="_on_weathering_label_mouse_entered"]
[connection signal="mouse_entered" from="OptionsContainer/OptionsGrid/WeatheringIncrease" to="." method="_on_weathering_label_mouse_entered"]
[connection signal="pressed" from="OptionsContainer/OptionsGrid/WeatheringIncrease" to="." method="_on_weathering_increase_pressed"]
[connection signal="mouse_entered" from="OptionsContainer/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="OptionsContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="OptionsContainer/BackButton" to="." method="_on_back_button_mouse_entered"]
[connection signal="pressed" from="OptionsContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="SettingsContainer/AudioSettings" to="." method="_on_audio_settings_pressed"]
[connection signal="pressed" from="SettingsContainer/WeatheringSettings" to="." method="_on_weathering_settings_pressed"]
[connection signal="value_changed" from="SettingsContainer/AudioSettingsContainer/MarginContainer/VBoxContainer/HBoxContainer/OverallVolume" to="." method="_on_overall_volume_value_changed"]
[connection signal="value_changed" from="SettingsContainer/AudioSettingsContainer/MarginContainer/VBoxContainer/HBoxContainer3/SfxVolume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="value_changed" from="SettingsContainer/AudioSettingsContainer/MarginContainer/VBoxContainer/HBoxContainer2/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="pressed" from="SettingsContainer/WeatheringSettingsContainer/PrevExample" to="." method="_on_prev_example_pressed"]
[connection signal="pressed" from="SettingsContainer/WeatheringSettingsContainer/NextExample" to="." method="_on_next_example_pressed"]
[connection signal="toggled" from="SettingsContainer/WeatheringSettingsContainer/EnabledCheckbox" to="." method="_on_enabled_checkbox_toggled"]
[connection signal="mouse_entered" from="SettingsContainer/SettingsBack" to="." method="_on_back_button_mouse_entered"]
[connection signal="pressed" from="SettingsContainer/SettingsBack" to="." method="_on_settings_back_pressed"]
[connection signal="pressed" from="MainMenu/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MainMenu/ZenButton" to="." method="_on_zen_button_pressed"]
[connection signal="pressed" from="MainMenu/TimeButton" to="." method="_on_time_button_pressed"]
[connection signal="pressed" from="MainMenu/GalleryButton" to="." method="_on_gallery_button_pressed"]
[connection signal="pressed" from="MainMenu/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MainMenu/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
